--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "postcss-import": "^14.0.2",
     "vue": "^3.2.8",
     "vue-router": "^4.0.11"
   },
@@ -22,6 +23,7 @@
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.8",
     "autoprefixer": "^10.3.4",
+    "postcss": "^8.3.6",
     "tailwindcss": "^2.2.9",
     "vite": "^2.5.3"
   }
