--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/tailwindcss": "^3.0.9",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vue/cli-plugin-unit-jest": "^5.0.4",
     "@vue/compiler-sfc": "^3.2.31",
     "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "@vue/vue3-jest": "^27.0.0",
     "autoprefixer": "^10.4.4",
-    "babel-jest": "^27.0.6",
-    "jest": "^27.0.5",
+    "babel-jest": "^27.0.0",
+    "jest": "^27.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.6"
