less is more: removed unnecessary packages & jest

--- a/package.json
+++ b/package.json
@@ -4,36 +4,24 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "serve": "vite preview",
-    "test": "npm run test:unit:coverage",
-    "test:unit": "jest --ci",
-    "test:unit:coverage": "jest --coverage"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "postcss-import": "^14.1.0",
-    "vue": "^3.2.31",
+    "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
-    "@headlessui/vue": "^1.6.0",
-    "@heroicons/vue": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
-    "@types/tailwindcss": "^3.0.9",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@vue/cli-plugin-unit-jest": "^5.0.4",
-    "@vue/compiler-sfc": "^3.2.33",
-    "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0",
-    "autoprefixer": "^10.4.4",
-    "babel-jest": "^27.0.0",
-    "jest": "^27.0.0",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "vite": "^2.8.6"
+    "@types/tailwindcss": "^3.0.10",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
+    "vite": "^2.9.6"
   }
 }
