--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "harmonics",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite --host",
+    "serve": "vite preview",
     "build": "vite build",
-    "serve": "vite preview"
+    "lint": "vue-cli-service lint",
+    "dev": "vite --host"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -19,8 +20,15 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/tailwindcss": "^3.0.10",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "^5.0.4",
     "autoprefixer": "^10.4.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.13",
+    "prettier": "^2.4.1",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.6"
   }
