--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: install
+          command: npm install
+      - run:
           name: build
           command: npm run build
       - sonarcloud/scan
