--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "vite --host"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "postcss-import": "^14.1.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
