--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "harmonics",
   "version": "0.0.2",
   "scripts": {
+    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skipping pnpm install",
     "serve": "vite preview",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue src",
