--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
-[build.environment]
-  NPM_FLAGS="--prefix=/dev/null"
-
 [build]
-  command = "pnpm run build"
+  command = "pnpm run build || ( npm install pnpm && pnpm run build )"
   publish = "dist"
   environment = { NODE_VERSION = "16" }
+
+[build.environment]
+    NPM_FLAGS = "--prefix=/dev/null"
 
 [[redirects]]
   from = "/*"
