--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "harmonics",
   "version": "0.0.2",
   "scripts": {
-    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skipping pnpm install",
+    "prebuild": "[[ $CI = true ]] && npx pnpm@3 install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "serve": "vite preview",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue src",
