--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
   command = "pnpm run build || ( npm install pnpm && pnpm run build )"
   publish = "dist"
-  environment = { NODE_VERSION = "16" }
 
 [build.environment]
-    NPM_FLAGS = "--prefix=/dev/null"
+  NPM_FLAGS = "--prefix=/dev/null"
+  NODE_VERSION = "16"
 
 [[redirects]]
   from = "/*"
