--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   NODE_VERSION = "16"
 
 [build]
-  command = "pnpm run build || ( npm install pnpm && pnpm run build )"
+  command = "npx pnpm install --store=node_modules/.pnpm-store && npx pnpm build"
   publish = "dist"
 
 [[redirects]]
