--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,20 +13,64 @@ executors:
           password: $DOCKER_HUB_PASSWORD
 
 jobs:
-  build:
-    executor: node-executor
+  setup:
+    executor:
+      name: node/default
     steps:
       - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "pnpm-lock.yaml" }}
       - run:
-          name: install
-          command: npm install
+          name: Install pnpm
+          command: curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm
       - run:
-          name: build
-          command: npm run build
+          name: Install packages
+          command: pnpm install --frozen-lockfile
+      - save_cache:
+          key: dependency-cache-{{ checksum "pnpm-lock.yaml" }}
+          paths:
+            - ~/.nvm
+            - node_modules
+  build:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "pnpm-lock.yaml" }}
+      - run:
+          name: Build
+          command: |
+            pnpm run build
+            ls dist
+      - save_cache:
+          key: build-output-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - dist
+      - store_artifacts:
+          path: dist
+          destination: dist
+  test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "pnpm-lock.yaml" }}
+      - run:
+          name: Test and Lint
+          command: pnpm run lint && pnpm test
       - sonarcloud/scan
 
 workflows:
-  validate:
+  version: 2
+  build_and_test:
     jobs:
+      - setup
       - build:
+          requires:
+            - setup
+      - test:
+          requires:
+            - setup
           context: SonarCloud
