--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "serve": "vite preview",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue src",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "dev": "vite --host"
   },
   "dependencies": {
@@ -32,6 +34,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vitest": "^0.12.7"
   }
 }
