--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.2",
   "scripts": {
     "prebuild": "[[ $CI = true ]] && npx pnpm@3 install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
+    "dev": "vite --host",
     "serve": "vite preview",
-    "build": "vite build",
-    "lint": "eslint --ext .js,.vue src",
+    "build": "vue-tsc --noEmit && vite build",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "dev": "vite --host"
+    "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prepushtest": "pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -20,21 +22,30 @@
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/jsdom": "^16.2.14",
+    "@types/node": "^17.0.35",
     "@types/tailwindcss": "^3.0.10",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
+    "c8": "^7.11.3",
     "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^9.0.1",
+    "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
     "vite": "^2.9.9",
-    "vitest": "^0.12.7"
+    "vite-tsconfig-paths": "^3.4.1",
+    "vitest": "^0.12.7",
+    "vue-tsc": "^0.34.15"
   }
 }
