--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "prepushtest": "pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "dependencies": {
@@ -17,16 +17,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "postcss-import": "^14.1.0",
     "vue": "^3.2.35",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.2",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.35",
     "@types/tailwindcss": "^3.0.10",
@@ -34,18 +29,17 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
     "eslint": "^8.16.0",
     "eslint-plugin-vue": "^8.7.1",
-    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
+    "vite-plugin-windicss": "^1.8.4",
     "vite-tsconfig-paths": "^3.4.1",
     "vitest": "^0.12.7",
-    "vue-tsc": "^0.34.15"
+    "vue-tsc": "^0.34.15",
+    "windicss": "^3.5.4"
   }
 }
