--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "prebuild": "[[ $CI = true ]] && npx pnpm@3 install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "dev": "vite --host",
     "serve": "vite preview",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite-ssg build",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -17,8 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "vue": "^3.2.35",
-    "vue-router": "^4.0.15"
+    "vue": "^3.2.35"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
@@ -29,6 +28,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/head": "^0.7.6",
     "c8": "^7.11.3",
     "eslint": "^8.16.0",
     "eslint-plugin-vue": "^8.7.1",
@@ -37,7 +37,9 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-windicss": "^1.8.4",
+    "vite-ssg": "^0.20.0",
     "vitest": "^0.12.7",
+    "vue-router": "^4.0.15",
     "vue-tsc": "^0.34.15",
     "windicss": "^3.5.4"
   }
