--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
+    "vite-plugin-md": "^0.13.1",
     "vite-plugin-windicss": "^1.8.4",
     "vite-ssg": "^0.20.0",
     "vitest": "^0.12.7",
