--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "vue": "^3.2.35"
+    "vue": "^3.2.35",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
@@ -37,10 +38,11 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-md": "^0.13.1",
+    "vite-plugin-pages": "^0.23.0",
+    "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-windicss": "^1.8.4",
     "vite-ssg": "^0.20.0",
     "vitest": "^0.12.7",
-    "vue-router": "^4.0.15",
     "vue-tsc": "^0.34.15",
     "windicss": "^3.5.4"
   }
