--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/head": "^0.7.6",
     "c8": "^7.11.3",
+    "dayjs": "^1.11.2",
     "eslint": "^8.16.0",
     "eslint-plugin-vue": "^8.7.1",
+    "fs-extra": "^10.1.0",
+    "gray-matter": "^4.0.3",
     "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
