--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^8.6.0",
     "@vueuse/head": "^0.7.6",
     "c8": "^7.11.3",
     "dayjs": "^1.11.2",
