--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "vue": "^3.2.36",
+    "@fortawesome/vue-fontawesome": "^3.0.0",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
     "@types/jsdom": "^16.2.14",
-    "@types/node": "^17.0.39",
+    "@types/node": "^17.0.41",
     "@types/tailwindcss": "^3.0.10",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -32,7 +32,7 @@
     "@vueuse/core": "^8.6.0",
     "@vueuse/head": "^0.7.6",
     "c8": "^7.11.3",
-    "dayjs": "^1.11.2",
+    "dayjs": "^1.11.3",
     "eslint": "^8.17.0",
     "eslint-plugin-vue": "^8.7.1",
     "fs-extra": "^10.1.0",
@@ -40,14 +40,14 @@
     "prettier": "^2.6.2",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3",
-    "vite": "^2.9.9",
+    "vite": "^2.9.10",
     "vite-plugin-md": "^0.14.0",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-windicss": "^1.8.4",
-    "vite-ssg": "^0.20.0",
+    "vite-ssg": "^0.20.1",
     "vitest": "^0.13.1",
-    "vue-tsc": "^0.36.0",
+    "vue-tsc": "^0.36.1",
     "windicss": "^3.5.4"
   }
 }
