--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
   node: circleci/node@5.0.2
   sonarcloud: sonarsource/sonarcloud@1.1.1
+  slack: circleci/slack@4.10.1
 
 jobs:
   build_and_test:
@@ -25,10 +26,19 @@ jobs:
           command: |
             pnpm run build
             ls dist
+      - slack/notify:
+          channel: circleci
+          event: fail
+          template: basic_fail_1
+          mentions: '@wouter'
+      - slack/notify:
+          channel: circleci
+          event: pass
+          template: success_tagged_deploy_1
 
 workflows:
   version: 2
   build_test_deploy:
     jobs:
       - build_and_test:
-          context: SonarCloud
+          context: SonarCloud, Slack
