fix multiple circleci contexts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,4 +41,6 @@ workflows:
   build_test_deploy:
     jobs:
       - build_and_test:
-          context: SonarCloud, Slack
+          context: 
+            - SonarCloud
+            - Slack
