--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,8 @@ jobs:
             pnpm run build
             ls dist
       - slack/notify:
-          channel: circleci
-          event: fail
-          template: basic_fail_1
-          mentions: '@wouter'
-      - slack/notify:
-          channel: circleci
-          event: pass
-          template: success_tagged_deploy_1
+          channel: circleci-netlify
+          event: always
 
 workflows:
   version: 2
