--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^8.7.4",
+    "@vueuse/core": "^8.7.5",
     "@vueuse/head": "^0.7.6",
+    "@yankeeinlondon/happy-wrapper": "2.1.0",
     "c8": "^7.11.3",
     "dayjs": "^1.11.3",
     "eslint": "^8.18.0",
@@ -40,8 +41,8 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
-    "vite": "^2.9.12",
-    "vite-plugin-md": "^0.17.2",
+    "vite": "^3.0.0-beta.1",
+    "vite-plugin-md": "^0.17.4",
     "vite-plugin-pages": "^0.24.2",
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-windicss": "^1.8.4",
