--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "@types/jsdom": "^16.2.14",
     "@types/node": "^18.0.0",
     "@types/tailwindcss": "^3.0.10",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "3.0.0-beta.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^8.7.5",
     "@vueuse/head": "^0.7.6",
-    "@yankeeinlondon/happy-wrapper": "2.1.0",
     "c8": "^7.11.3",
     "dayjs": "^1.11.3",
     "eslint": "^8.18.0",
@@ -42,14 +41,14 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0-beta.1",
-    "vite-plugin-md": "^0.17.4",
+    "vite": "^3.0.0-beta.2",
+    "vite-plugin-md": "^0.18.1",
     "vite-plugin-pages": "^0.24.2",
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-windicss": "^1.8.4",
     "vite-ssg": "^0.20.1",
-    "vitest": "^0.15.2",
+    "vitest": "^0.16.0",
     "vue-tsc": "^0.38.1",
-    "windicss": "^3.5.4"
+    "windicss": "^3.5.5"
   }
 }
