--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-vue": "^9.1.1",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
+    "happy-dom": "^5.3.1",
     "markdown-it": "^13.0.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
