--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             pnpm run build
             ls dist
       - slack/notify:
-          channel: circleci-netlify-vercel
+          channel: circleci
           event: always
 
 workflows:
