--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^8.9.0",
+    "@vueuse/core": "^8.9.1",
     "@vueuse/head": "^0.7.6",
     "c8": "^7.11.3",
     "dayjs": "^1.11.3",
@@ -43,14 +43,14 @@
     "prismjs": "^1.28.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0-beta.7",
-    "vite-plugin-md": "^0.18.1",
+    "vite": "^3.0.0-beta.9",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-pages-sitemap": "^1.2.2",
+    "vite-plugin-vue-markdown": "^0.20.1",
     "vite-plugin-windicss": "^1.8.6",
     "vite-ssg": "^0.20.2",
-    "vitest": "^0.17.0",
-    "vue-tsc": "^0.38.3",
+    "vitest": "^0.18.0",
+    "vue-tsc": "^0.38.4",
     "windicss": "^3.5.6"
   }
 }
