--- a/package.json
+++ b/package.json
@@ -18,39 +18,38 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.1"
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^16.2.14",
-    "@types/node": "^18.0.3",
-    "@types/tailwindcss": "^3.1.0",
-    "@vitejs/plugin-vue": "3.0.0-beta.1",
+    "@types/node": "^18.0.5",
+    "@vitejs/plugin-vue": "3.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^8.9.1",
+    "@vueuse/core": "^8.9.4",
     "@vueuse/head": "^0.7.6",
     "c8": "^7.11.3",
     "dayjs": "^1.11.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.2.0",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
-    "happy-dom": "^6.0.2",
+    "happy-dom": "^6.0.3",
     "markdown-it": "^13.0.1",
     "prettier": "^2.7.1",
     "prismjs": "^1.28.0",
-    "ts-node": "^10.8.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0-beta.9",
+    "vite": "^3.0.0",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-vue-markdown": "^0.20.1",
-    "vite-plugin-windicss": "^1.8.6",
+    "vite-plugin-windicss": "^1.8.7",
     "vite-ssg": "^0.20.2",
-    "vitest": "^0.18.0",
-    "vue-tsc": "^0.38.4",
+    "vitest": "^0.18.1",
+    "vue-tsc": "^0.38.8",
     "windicss": "^3.5.6"
   }
 }
