--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harmonics",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "scripts": {
     "prebuild": "[[ $CI = true ]] && npx pnpm@3 install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "dev": "vite --host",
@@ -10,6 +10,7 @@
     "coverage": "vitest run --coverage",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint:fix": "eslint . --fix",
     "prepushtest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "dependencies": {
@@ -17,14 +18,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "prism-theme-vars": "^0.2.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.25.2",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^16.2.14",
-    "@types/node": "^18.0.5",
-    "@vitejs/plugin-vue": "3.0.0",
+    "@types/node": "^18.0.6",
+    "@vitejs/plugin-vue": "3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
@@ -36,13 +39,18 @@
     "eslint-plugin-vue": "^9.2.0",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
-    "happy-dom": "^6.0.3",
+    "happy-dom": "^6.0.4",
     "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.4",
+    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-prism": "^2.2.4",
     "prettier": "^2.7.1",
     "prismjs": "^1.28.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0",
+    "unplugin-auto-import": "^0.9.3",
+    "unplugin-vue-components": "^0.21.1",
+    "vite": "^3.0.1",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-pages-sitemap": "^1.2.2",
     "vite-plugin-vue-markdown": "^0.20.1",
@@ -51,5 +59,8 @@
     "vitest": "^0.18.1",
     "vue-tsc": "^0.38.8",
     "windicss": "^3.5.6"
+  },
+  "eslintConfig": {
+    "extends": "@antfu"
   }
 }
