--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
           name: Install packages
           command: pnpm install --no-frozen-lockfile
       - run:
+          name: Lint
+          command: pnpm run lint
+      - run:
           name: Test
           command: pnpm test
       - sonarcloud/scan
