--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "pinia": "^2.0.16",
     "prism-theme-vars": "^0.2.4",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
+    "@intlify/vite-plugin-vue-i18n": "^4.0.0",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/jsdom": "^16.2.14",
+    "@types/jsdom": "^16.2.15",
     "@types/node": "^18.0.6",
     "@vitejs/plugin-vue": "3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -33,8 +36,8 @@
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^8.9.4",
     "@vueuse/head": "^0.7.6",
-    "c8": "^7.11.3",
-    "dayjs": "^1.11.3",
+    "c8": "^7.12.0",
+    "dayjs": "^1.11.4",
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.2.0",
     "fs-extra": "^10.1.0",
@@ -48,16 +51,16 @@
     "prismjs": "^1.28.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "unplugin-auto-import": "^0.9.3",
+    "unplugin-auto-import": "^0.9.4",
     "unplugin-vue-components": "^0.21.1",
-    "vite": "^3.0.1",
+    "vite": "^3.0.2",
     "vite-plugin-pages": "^0.25.0",
-    "vite-plugin-pages-sitemap": "^1.2.2",
+    "vite-plugin-pages-sitemap": "^1.3.0",
     "vite-plugin-vue-markdown": "^0.20.1",
     "vite-plugin-windicss": "^1.8.7",
     "vite-ssg": "^0.20.2",
     "vitest": "^0.18.1",
-    "vue-tsc": "^0.38.8",
+    "vue-tsc": "^0.38.9",
     "windicss": "^3.5.6"
   },
   "eslintConfig": {
