--- a/tsconfig.vite-config.json
+++ b/tsconfig.vite-config.json
@@ -3,6 +3,6 @@
   "include": ["vite.config.*"],
   "compilerOptions": {
     "composite": true,
-    "types": ["node", "vitest"]
+    "types": ["node", "vitest", "@intlify/vite-plugin-vue-i18n/client"]
   }
 }
