--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "composite": true,
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["node", "jsdom",
+      "@intlify/vite-plugin-vue-i18n/client"
+    ]
   }
 }
