--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harmonics",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "scripts": {
     "prebuild": "[[ $CI = true ]] && npx pnpm@3 install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "dev": "vite --host",
@@ -21,16 +21,19 @@
     "animate.css": "^4.1.1",
     "pinia": "^2.0.16",
     "prism-theme-vars": "^0.2.4",
+    "vee-validate": "^4.6.2",
     "vue": "^3.2.37",
+    "vue-easy-lightbox": "^1.7.0",
     "vue-i18n": "^9.1.10",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
     "@intlify/vite-plugin-vue-i18n": "^5.0.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.0.6",
+    "@types/node": "^18.6.1",
     "@vitejs/plugin-vue": "3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -40,7 +43,7 @@
     "c8": "^7.12.0",
     "dayjs": "^1.11.4",
     "eslint": "^8.20.0",
-    "eslint-plugin-vue": "^9.2.0",
+    "eslint-plugin-vue": "^9.3.0",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
     "happy-dom": "^6.0.4",
@@ -52,9 +55,9 @@
     "prismjs": "^1.28.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "unplugin-auto-import": "^0.10.0",
+    "unplugin-auto-import": "^0.10.1",
     "unplugin-vue-components": "^0.21.1",
-    "vite": "^3.0.2",
+    "vite": "^3.0.3",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-pages-sitemap": "^1.3.0",
     "vite-plugin-vue-markdown": "^0.20.1",
