--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harmonics",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "scripts": {
     "prebuild": "[[ $CI = true ]] && npx pnpm@3 install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "dev": "vite --host",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "animate.css": "^4.1.1",
@@ -38,7 +39,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^9.0.0",
+    "@vueuse/core": "^9.0.2",
     "@vueuse/head": "^0.7.8",
     "c8": "^7.12.0",
     "dayjs": "^1.11.4",
@@ -55,7 +56,7 @@
     "prismjs": "^1.28.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "unplugin-auto-import": "^0.10.2",
+    "unplugin-auto-import": "^0.10.3",
     "unplugin-vue-components": "^0.21.2",
     "vite": "^3.0.4",
     "vite-plugin-pages": "^0.25.0",
