--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   NODE_VERSION = "16"
 
 [build]
-  command = "npx pnpm install --frozen-lockfile --store=node_modules/.pnpm-store && npx pnpm test && npx pnpm build"
+  command = "npx pnpm install --frozen-lockfile --store=node_modules/.pnpm-store && npx pnpm coverage && npx pnpm build"
   publish = "dist"
 
 [[redirects]]
