--- a/content/en.yml
+++ b/content/en.yml
@@ -1,4 +1,8 @@
 language: language
+website:
+  title: Harmonics.be
+  description: Healing power of Sound & Music - by Wouter Vernaillen
+  noJavaScript: JavaScript is required
 menu:
   home: Home
   blog: Blog
