--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint . --fix",
     "prepushtest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build",
     "netlify:build": "netlify build",
+    "netlify:test": "netlify deploy",
     "netlify:deploy": "netlify deploy --prod"
   },
   "dependencies": {
@@ -22,53 +23,54 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "animate.css": "^4.1.1",
-    "pinia": "^2.0.17",
+    "pinia": "^2.0.20",
     "prism-theme-vars": "^0.2.4",
-    "vee-validate": "^4.6.2",
+    "vee-validate": "^4.6.6",
     "vue": "^3.2.37",
-    "vue-easy-lightbox": "^1.7.1",
-    "vue-i18n": "^9.2.0",
+    "vue-easy-lightbox": "^1.8.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.2",
-    "@intlify/vite-plugin-vue-i18n": "^5.0.1",
+    "@antfu/eslint-config": "^0.26.1",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.6.3",
-    "@vitejs/plugin-vue": "3.0.1",
+    "@types/node": "^18.7.8",
+    "@vitejs/plugin-vue": "3.0.3",
+    "@vitest/coverage-c8": "^0.22.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^9.0.2",
+    "@vueuse/core": "^9.1.0",
     "@vueuse/head": "^0.7.9",
     "c8": "^7.12.0",
-    "dayjs": "^1.11.4",
-    "eslint": "^8.21.0",
+    "dayjs": "^1.11.5",
+    "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
     "happy-dom": "^6.0.4",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
-    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-prism": "^2.2.4",
-    "netlify-cli": "^10.13.0",
+    "netlify-cli": "^11.3.0",
     "prettier": "^2.7.1",
     "prismjs": "^1.28.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "unplugin-auto-import": "^0.10.3",
-    "unplugin-vue-components": "^0.21.2",
-    "vite": "^3.0.4",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.4",
+    "vite": "^3.0.9",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-pages-sitemap": "^1.3.0",
     "vite-plugin-vue-markdown": "^0.21.1",
     "vite-plugin-windicss": "^1.8.7",
     "vite-ssg": "^0.20.2",
-    "vitest": "^0.20.2",
-    "vue-tsc": "^0.39.4",
+    "vitest": "^0.22.1",
+    "vue-tsc": "^0.40.1",
     "windicss": "^3.5.6"
   },
   "eslintConfig": {
