mailinglist form central on homepage

--- a/content/en.yml
+++ b/content/en.yml
@@ -30,6 +30,7 @@ footer:
   copyright: Copyright ©
 mailinglist:
   title: Subscribe to our mailing list
+  subtitle: ...and get notified of our upcoming activities and ecstatic dance sessions
   email: Email Address
   firstname: First Name
   subscribe: Subscribe
