--- a/content/nl.yml
+++ b/content/nl.yml
@@ -30,6 +30,7 @@ footer:
   copyright: Copyright ©
 mailinglist:
   title: Schrijf in op onze mailinglist
+  subtitle: ...en wordt verwittigd van onze aankomende activiteiten en ecstatic dance sessies
   email: E-mail adres
   firstname: Voornaam
   subscribe: Inschrijven
