added dance to description

--- a/src/content/en.yml
+++ b/src/content/en.yml
@@ -2,7 +2,7 @@ language: language
 website:
   hostname: 'https://harmonics.be'
   title: Harmonics.be
-  description: Healing power of Sound & Music - by Wouter Vernaillen
+  description: Healing power of Sound, Music & Dance - by Wouter Vernaillen
   noJavaScript: JavaScript is required
 menu:
   home: Home
