--- a/src/content/nl.yml
+++ b/src/content/nl.yml
@@ -2,7 +2,7 @@ language: taal
 website:
   hostname: 'https://harmonics.be'
   title: Harmonics.be
-  description: Genezende kracht van Geluid en Muziek - door Wouter Vernaillen
+  description: Genezende kracht van Geluid, Muziek en Dans - door Wouter Vernaillen
   noJavaScript: JavaScript is nodig
 menu:
   home: Home
