--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typecheck": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:fix": "eslint . --fix",
-    "prepushtest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build",
+    "prepushtest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build && serve dist",
     "netlify:build": "netlify build",
     "netlify:test": "netlify deploy",
     "netlify:deploy": "netlify deploy --prod"
@@ -25,7 +25,7 @@
     "animate.css": "^4.1.1",
     "pinia": "^2.0.22",
     "prism-theme-vars": "^0.2.4",
-    "vee-validate": "^4.6.7",
+    "vee-validate": "^4.6.8",
     "vue": "^3.2.39",
     "vue-easy-lightbox": "^1.8.2",
     "vue-i18n": "^9.2.2",
@@ -33,7 +33,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.26.3",
+    "@antfu/eslint-config": "^0.27.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^20.0.0",
@@ -44,7 +44,7 @@
     "@vue/eslint-config-typescript": "^11.0.1",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.2.0",
-    "@vueuse/head": "^0.7.11",
+    "@vueuse/head": "^0.7.12",
     "c8": "^7.12.0",
     "dayjs": "^1.11.5",
     "eslint": "^8.23.1",
