--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,15 @@ orbs:
   sonarcloud: sonarsource/sonarcloud@1.1.1
   slack: circleci/slack@4.10.1
 
+executors:
+  pnpm-executor:
+    docker:
+      - image: vernaillen/circleci-pnpm:18.9.1-browsers
+    working_directory: /tmp
+
 jobs:
   build_test_deploy:
-    docker:
-      - image: vernaillen/circleci-pnpm:18.9.1
+    executor: pnpm-executor
     steps:
       - checkout
       - run:
@@ -29,20 +34,27 @@ jobs:
           name: Deploy
           command: |
             pnpm run netlify:deploy
+      - persist_to_workspace:
+          root: .
+          paths:
+            - package.json
+            - node-modules
+            - cypress
+            - cypress.config.ts
       - slack/notify:
           channel: circleci
           event: always
   integration_test:
-    docker:
-      - image: vernaillen/circleci-pnpm:18.9.1-browsers
+    executor: pnpm-executor
     steps:
-      - checkout
-      - run:
-          name: Install packages
-          command: pnpm install --no-frozen-lockfile
+      - attach_workspace:
+          at: /tmp
       - run:
           name: Run Cypress
           command: pnpm run cypress:run 
+      - slack/notify:
+          channel: circleci
+          event: always
 
 workflows:
   version: 2
@@ -58,3 +70,5 @@ workflows:
           filters:
             branches:
               only: master
+          context: 
+            - Slack
