--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
   pnpm-executor:
     docker:
       - image: vernaillen/circleci-pnpm:18.9.1-browsers
-    working_directory: /workspace
+    working_directory: /tmp/workspace
 
 jobs:
   build_test_deploy:
@@ -48,7 +48,7 @@ jobs:
     executor: pnpm-executor
     steps:
       - attach_workspace:
-          at: /workspace
+          at: /tmp/workspace
       - run:
           name: Run Cypress
           command: pnpm run cypress:run 
