fixed typo in node_modules + added pnpm-lock.yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,8 @@ jobs:
           root: .
           paths:
             - package.json
-            - node-modules
+            - pnpm-lock.yaml
+            - node_modules
             - cypress
             - cypress.config.ts
       - slack/notify:
