--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,10 @@ jobs:
       - run:
           name: Test
           command: pnpm test
+      - run:
+          name: Build
+          command: |
+            pnpm run netlify:build
       - sonarcloud/scan
       - persist_to_workspace:
           root: .
@@ -34,6 +38,7 @@ jobs:
             - node_modules
             - cypress
             - cypress.config.ts
+            - dist
       - slack/notify:
           channel: circleci
           event: fail
@@ -42,10 +47,6 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp/workspace
-      - run:
-          name: Build
-          command: |
-            pnpm run netlify:build
       - run:
           name: Deploy
           command: |
