test cypress in circleci

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "netlify:deploy": "netlify deploy --prod",
     "cypress:install": "cypress install",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run --browser=chrome"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
