--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
             - src
             - test
             - dist
+            - .gitignore
       - slack/notify:
           channel: circleci
           event: fail
