--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
             - test
             - dist
             - .gitignore
+            - sonar-project.properties
       - slack/notify:
           channel: circleci
           event: fail
