--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "animate.css": "^4.1.1",
-    "pinia": "^2.0.22",
+    "axios": "^1.1.3",
+    "pinia": "^2.0.23",
     "prism-theme-vars": "^0.2.4",
-    "vee-validate": "^4.6.10",
-    "vue": "^3.2.40",
-    "vue-easy-lightbox": "^1.8.2",
+    "vee-validate": "^4.7.1",
+    "vue": "^3.2.41",
+    "vue-easy-lightbox": "^1.9.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
     "yup": "^0.32.11"
@@ -41,41 +42,41 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.8.3",
-    "@vitejs/plugin-vue": "3.1.2",
-    "@vitest/coverage-c8": "^0.24.0",
+    "@types/node": "^18.11.4",
+    "@vitejs/plugin-vue": "3.2.0-beta.0",
+    "@vitest/coverage-c8": "^0.24.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^9.3.0",
-    "@vueuse/head": "^0.9.7",
+    "@vueuse/core": "^9.3.1",
+    "@vueuse/head": "^0.9.8",
     "c8": "^7.12.0",
-    "cypress": "^10.9.0",
-    "dayjs": "^1.11.5",
-    "eslint": "^8.24.0",
+    "cypress": "^10.10.0",
+    "dayjs": "^1.11.6",
+    "eslint": "^8.26.0",
     "eslint-plugin-vue": "^9.6.0",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
-    "happy-dom": "^7.4.0",
+    "happy-dom": "^7.6.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-prism": "^2.3.0",
-    "netlify-cli": "^12.0.7",
+    "netlify-cli": "^12.0.11",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.8",
-    "vite": "^3.1.6",
-    "vite-plugin-pages": "^0.26.0",
+    "vite": "3.2.0-beta.1",
+    "vite-plugin-pages": "^0.27.1",
     "vite-plugin-pages-sitemap": "^1.4.0",
     "vite-plugin-vue-markdown": "^0.22.1",
     "vite-plugin-windicss": "^1.8.8",
-    "vite-ssg": "^0.21.0",
-    "vitest": "^0.24.0",
-    "vue-tsc": "^1.0.0",
+    "vite-ssg": "^0.21.1",
+    "vitest": "^0.24.3",
+    "vue-tsc": "^1.0.9",
     "windicss": "^3.5.6"
   },
   "eslintConfig": {
