--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "typecheck": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:fix": "eslint . --fix",
-    "prepushtest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build && serve dist",
     "netlify:build": "netlify build",
     "netlify:test": "netlify deploy",
     "netlify:deploy": "netlify deploy --prod",
     "netlify:trigger": "netlify deploy --prod --trigger",
     "cypress:install": "cypress install",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "cypress:local": "start-server-and-test serve http://localhost:3000 cypress:run --config baseUrl=http://localhost:3000",
+    "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run cypress:local"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -34,30 +35,30 @@
     "vue": "^3.2.41",
     "vue-easy-lightbox": "^1.9.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.5",
+    "vue-router": "^4.1.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.27.0",
+    "@antfu/eslint-config": "^0.29.2",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.11.4",
-    "@vitejs/plugin-vue": "3.2.0-beta.0",
-    "@vitest/coverage-c8": "^0.24.3",
+    "@types/node": "^18.11.8",
+    "@vitejs/plugin-vue": "3.2.0",
+    "@vitest/coverage-c8": "^0.24.4",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "@vueuse/core": "^9.3.1",
+    "@vueuse/core": "^9.4.0",
     "@vueuse/head": "^0.9.8",
     "c8": "^7.12.0",
-    "cypress": "^10.10.0",
+    "cypress": "^10.11.0",
     "dayjs": "^1.11.6",
     "eslint": "^8.26.0",
-    "eslint-plugin-vue": "^9.6.0",
+    "eslint-plugin-vue": "^9.7.0",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
-    "happy-dom": "^7.6.0",
+    "happy-dom": "^7.6.6",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-link-attributes": "^4.0.1",
@@ -65,17 +66,18 @@
     "netlify-cli": "^12.0.11",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
+    "start-server-and-test": "^1.14.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
-    "unplugin-auto-import": "^0.11.2",
-    "unplugin-vue-components": "^0.22.8",
-    "vite": "3.2.0-beta.1",
+    "unplugin-auto-import": "^0.11.4",
+    "unplugin-vue-components": "^0.22.9",
+    "vite": "^3.2.2",
     "vite-plugin-pages": "^0.27.1",
     "vite-plugin-pages-sitemap": "^1.4.0",
     "vite-plugin-vue-markdown": "^0.22.1",
     "vite-plugin-windicss": "^1.8.8",
-    "vite-ssg": "^0.21.1",
-    "vitest": "^0.24.3",
+    "vite-ssg": "^0.21.2",
+    "vitest": "^0.24.4",
     "vue-tsc": "^1.0.9",
     "windicss": "^3.5.6"
   },
