--- a/src/content/en.yml
+++ b/src/content/en.yml
@@ -30,8 +30,8 @@ footer:
   findus: You can find us on any of these platforms.
   copyright: Copyright ©
 mailinglist:
-  title: Subscribe to our mailing list
-  subtitle: ...and get notified of our upcoming activities and ecstatic dance sessions
+  title: Subscribe to the Harmonics mailing list
+  subtitle: ...and get notified of our upcoming activities, ecstatic dance and trance dance sessions
   email: Email Address
   firstname: First Name
   subscribe: Subscribe
