--- a/src/content/nl.yml
+++ b/src/content/nl.yml
@@ -30,8 +30,8 @@ footer:
   findus: Je kan ons ook vinden op deze platformen
   copyright: Copyright ©
 mailinglist:
-  title: Schrijf in op onze mailinglist
-  subtitle: ...en wordt verwittigd van onze aankomende activiteiten en ecstatic dance sessies
+  title: Schrijf je in op de Harmonics mailinglist
+  subtitle: ...en wordt verwittigd van onze aankomende activiteiten, ecstatic dance & trance dance sessies
   email: E-mail adres
   firstname: Voornaam
   subscribe: Inschrijven
