--- a/src/content/nl.yml
+++ b/src/content/nl.yml
@@ -12,7 +12,7 @@ menu:
 home:
   title: Harmonics
   tagline: Genezende kracht van Geluid, Muziek en Dans
-  services: Ecstatic Dance, Immersive Soundbaths, Muziek Productie, etc
+  services: Ecstatic Dance, Trance Dance, Immersive Soundbaths, Muziek Productie, etc
 blog:
   readmore: lees meer
   findoutmore: ontdek meer
@@ -31,7 +31,7 @@ footer:
   copyright: Copyright ©
 mailinglist:
   title: Schrijf je in op de Harmonics mailinglist
-  subtitle: ...en wordt verwittigd van onze aankomende activiteiten, ecstatic dance & trance dance sessies
+  subtitle: ...en blijf op de hoogte van de komende ecstatic dance & trance dance sessies
   email: E-mail adres
   firstname: Voornaam
   subscribe: Inschrijven
