--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "netlify:test": "netlify deploy",
     "netlify:deploy": "netlify deploy --prod",
     "netlify:trigger": "netlify deploy --prod --trigger",
-    "cypress:install": "cypress install",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "cypress:dev": "start-server-and-test dev http://localhost:5173 'cypress open --config baseUrl=http://localhost:5173'",
-    "cypress:local": "start-server-and-test serve http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
-    "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run cypress:local"
+    "cy:install": "cypress install",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:dev": "start-server-and-test dev http://localhost:5173 'cypress open --config baseUrl=http://localhost:5173'",
+    "cy:local": "start-server-and-test serve http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
+    "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run cy:local"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -32,7 +32,7 @@
     "axios": "^1.1.3",
     "pinia": "^2.0.23",
     "prism-theme-vars": "^0.2.4",
-    "vee-validate": "^4.7.2",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.45",
     "vue-easy-lightbox": "^1.10.0",
     "vue-i18n": "^9.2.2",
@@ -46,12 +46,12 @@
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "3.2.0",
-    "@vitest/coverage-c8": "^0.25.1",
+    "@vitest/coverage-c8": "^0.25.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.5.0",
-    "@vueuse/head": "^1.0.0",
+    "@vueuse/head": "^1.0.13",
     "c8": "^7.12.0",
     "cypress": "^11.0.1",
     "dayjs": "^1.11.6",
@@ -78,7 +78,7 @@
     "vite-plugin-vue-markdown": "^0.22.1",
     "vite-plugin-windicss": "^1.8.8",
     "vite-ssg": "^0.21.2",
-    "vitest": "^0.25.1",
+    "vitest": "^0.25.2",
     "vue-tsc": "^1.0.9",
     "windicss": "^3.5.6"
   },
