--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,3 +83,11 @@ workflows:
       - build:
           context: 
             - Slack
+      - e2e:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
+          context: 
+            - Slack
