fixed typo in mailchimp css link

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:dev": "start-server-and-test dev http://localhost:3000 'cypress open --config baseUrl=http://localhost:3000'",
-    "cy:local": "start-server-and-test preview http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'"
+    "cy:local": "start-server-and-test preview http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
+    "fulltest": "rm -rf node_modules && pnpm i && pnpm run cy:local"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@pinia/nuxt": "^0.4.4",
+    "@pinia/nuxt": "^0.4.5",
     "@vueuse/nuxt": "^9.5.0",
     "animate.css": "^4.1.1",
     "vee-validate": "^4.7.3",
